@@ -4,7 +4,7 @@ with As.U.Utils, Environ, Argument, Argument_Parser, Basic_Proc, Language,
 with Search_Pattern, Replace_Pattern, Substit, File_Mng, Debug;
 procedure Asubst is
 
-  Version : constant String  := "V16.4";
+  Version : constant String  := "V16.5";
 
   -- Exit codes
   Ok_Exit_Code : constant Natural := 0;
